generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
}

model Plan {
  id                      String   @id @default(cuid())
  name                    String
  slug                    String   @unique
  maxRooms                Int      @default(10)
  maxUsers                Int      @default(50)
  maxReservationsPerMonth Int?
  features                Json?
  isActive                Boolean  @default(true)
  createdAt               DateTime @default(now())
  updatedAt               DateTime @updatedAt

  subscriptions Subscription[]
  organizations Organization[]

  @@map("plans")
}

model Organization {
  id        String             @id @default(cuid())
  name      String
  legalName String?
  cnpj      String?            @unique
  email     String?
  phone     String?
  slug      String             @unique
  status    OrganizationStatus @default(ACTIVE)
  logo      String?
  settings  Json?
  ownerId   String
  planId    String?
  deletedAt DateTime?
  createdAt DateTime           @default(now())
  updatedAt DateTime           @updatedAt

  owner   User                 @relation("OrganizationOwner", fields: [ownerId], references: [id])
  plan    Plan?                @relation(fields: [planId], references: [id], onDelete: SetNull)
  members OrganizationMember[]

  isSchool      Boolean                  @default(false)
  turmas        Turma[]
  disciplinas   Disciplina[]
  professores   Professor[]
  invites       OrganizationInvite[]
  rooms         Room[]
  sectors       Sector[]
  reservations  Reservation[]
  incidents     Incident[]
  notifications Notification[]
  subscription  Subscription?
  auditLogs     AuditLog[]
  dailyStats    OrganizationDailyStats[]

  @@index([ownerId])
  @@index([status])
  @@index([deletedAt])
  @@map("organizations")
}

model Subscription {
  id                 String             @id @default(cuid())
  organizationId     String             @unique
  planId             String
  status             SubscriptionStatus @default(ACTIVE)
  externalId         String?
  currentPeriodStart DateTime           @default(now())
  currentPeriodEnd   DateTime
  createdAt          DateTime           @default(now())
  updatedAt          DateTime           @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  plan         Plan         @relation(fields: [planId], references: [id])

  @@index([planId])
  @@index([status])
  @@map("subscriptions")
}

model OrganizationMember {
  id             String           @id @default(cuid())
  organizationId String
  userId         String
  role           OrganizationRole @default(MEMBER)
  invitedById    String?
  joinedAt       DateTime         @default(now())
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  invitedBy    User?        @relation("MemberInvitedBy", fields: [invitedById], references: [id], onDelete: SetNull)

  @@unique([organizationId, userId])
  @@index([userId])
  @@index([organizationId, role])
  @@map("organization_members")
}

model OrganizationInvite {
  id             String           @id @default(cuid())
  organizationId String
  email          String
  role           OrganizationRole @default(MEMBER)
  token          String           @unique @default(cuid())
  expiresAt      DateTime
  acceptedAt     DateTime?
  invitedById    String?
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  invitedBy    User?        @relation("InviteSentBy", fields: [invitedById], references: [id], onDelete: SetNull)

  @@unique([organizationId, email])
  @@index([email])
  @@index([expiresAt])
  @@map("organization_invites")
}

model AuditLog {
  id             String   @id @default(cuid())
  organizationId String?
  actorUserId    String
  action         String
  entityType     String
  entityId       String?
  metadata       Json?
  createdAt      DateTime @default(now())

  organization Organization? @relation(fields: [organizationId], references: [id], onDelete: SetNull)
  actor        User          @relation(fields: [actorUserId], references: [id], onDelete: Cascade)

  @@index([organizationId, createdAt])
  @@index([actorUserId])
  @@index([entityType, entityId])
  @@map("audit_logs")
}

model OrganizationDailyStats {
  organizationId     String
  date               DateTime @db.Date
  reservationsCount  Int      @default(0)
  activeUsersCount   Int      @default(0)
  openIncidentsCount Int      @default(0)
  roomsCount         Int      @default(0)
  membersCount       Int      @default(0)
  updatedAt          DateTime @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@id([organizationId, date])
  @@map("organization_daily_stats")
}

model User {
  id              String       @id @default(cuid())
  name            String?
  email           String       @unique
  emailVerified   DateTime?
  passwordHash    String?
  cpf             String?      @unique
  phone           String?
  image           String?
  /// @deprecated Derivar de OrganizationMember.role — mantido para compatibilidade
  role            Role         @default(USER)
  platformRole    PlatformRole @default(NONE)
  dashboardLayout Json?
  deletedAt       DateTime?
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt

  accounts      Account[]
  notifications Notification[]
  reservations  Reservation[]
  decidedReservations Reservation[] @relation("ReservationDecidedBy")
  sessions      Session[]
  pushTokens    PushToken[]
  sectorMemberships SectorMember[]

  ownedOrganizations Organization[]       @relation("OrganizationOwner")
  memberships        OrganizationMember[]
  invitesSent        OrganizationInvite[] @relation("InviteSentBy")
  membersInvited     OrganizationMember[] @relation("MemberInvitedBy")
  auditLogs          AuditLog[]

  reportedIncidents IncidentStatusHistory[]
  assignedIncidents Incident[]              @relation("AssignedIncidents")
  incidentsReported Incident[]              @relation("ReportedIncidents")
  professores       Professor[]

  @@index([platformRole])
  @@index([deletedAt])
  @@map("users")
}

model Sector {
  id             String    @id @default(cuid())
  organizationId String
  name           String
  description    String?
  deletedAt      DateTime?
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt

  organization Organization   @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  members      SectorMember[]
  rooms        Room[]

  @@unique([organizationId, name])
  @@index([organizationId])
  @@index([deletedAt])
  @@map("sectors")
}

model SectorMember {
  id        String           @id @default(cuid())
  sectorId  String
  userId    String
  role      SectorMemberRole @default(MANAGER)
  createdAt DateTime         @default(now())
  updatedAt DateTime         @updatedAt

  sector Sector @relation(fields: [sectorId], references: [id], onDelete: Cascade)
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([sectorId, userId])
  @@index([userId])
  @@map("sector_members")
}

model Room {
  id                  String     @id @default(cuid())
  name                String
  description         String?
  status              RoomStatus @default(LIVRE)
  capacity            Int?
  locationDescription String?
  outletCount         Int?
  climateControlled   Boolean    @default(false)
  organizationId      String
  sectorId            String?
  deletedAt           DateTime?
  createdAt           DateTime   @default(now())
  updatedAt           DateTime   @updatedAt

  organization Organization  @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  sector       Sector?       @relation(fields: [sectorId], references: [id], onDelete: SetNull)
  items        Item[]
  reservations Reservation[]
  incidents    Incident[]

  @@index([organizationId])
  @@index([organizationId, status])
  @@index([sectorId])
  @@index([deletedAt])
  @@map("rooms")
}

model Item {
  id             String   @id @default(cuid())
  name           String
  description    String?
  specifications String[]
  quantity       Int      @default(1)
  icon           String?
  roomId         String?
  organizationId String?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  room      Room?      @relation(fields: [roomId], references: [id])
  images    Image[]
  incidents Incident[]

  @@index([roomId])
  @@index([organizationId])
  @@map("items")
}

model Image {
  id        String   @id @default(cuid())
  itemId    String
  filename  String
  path      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  item      Item     @relation(fields: [itemId], references: [id], onDelete: Cascade)

  @@index([itemId])
  @@map("images")
}

model Reservation {
  id                    String            @id @default(cuid())
  userId                String
  roomId                String
  organizationId        String
  startTime             DateTime
  endTime               DateTime
  purpose               String?
  status                ReservationStatus @default(PENDING)
  decidedById           String?
  decidedAt             DateTime?
  decisionReason        String?
  createdAt             DateTime          @default(now())
  updatedAt             DateTime          @updatedAt
  googleCalendarEventId String?

  isRecurring         Boolean           @default(false)
  recurringPattern    RecurringPattern?
  recurringDaysOfWeek Int[]             @default([])
  recurringEndDate    DateTime?
  parentReservationId String?
  recurringTemplateId String?

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  room         Room         @relation(fields: [roomId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  decidedBy    User?        @relation("ReservationDecidedBy", fields: [decidedById], references: [id], onDelete: SetNull)

  childReservations Reservation[] @relation("RecurringReservations")
  parentReservation Reservation?  @relation("RecurringReservations", fields: [parentReservationId], references: [id], onDelete: Cascade)

  @@index([organizationId, startTime])
  @@index([organizationId, status])
  @@index([roomId, status, startTime, endTime])
  @@index([userId, startTime])
  @@index([decidedById])
  @@index([recurringTemplateId])
  @@index([status, startTime])
  @@map("reservations")
}

model Notification {
  id             String           @id @default(cuid())
  userId         String
  organizationId String?
  type           NotificationType
  title          String
  message        String
  data           Json?
  isRead         Boolean          @default(false)
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  organization Organization? @relation(fields: [organizationId], references: [id], onDelete: SetNull)

  @@index([userId, isRead])
  @@index([userId, createdAt])
  @@index([organizationId, createdAt])
  @@map("notifications")
}

model Incident {
  id             String           @id @default(cuid())
  title          String
  description    String
  priority       IncidentPriority @default(MEDIUM)
  status         IncidentStatus   @default(REPORTED)
  category       IncidentCategory
  organizationId String

  reportedById String
  reportedBy   User    @relation("ReportedIncidents", fields: [reportedById], references: [id])
  assignedToId String?
  assignedTo   User?   @relation("AssignedIncidents", fields: [assignedToId], references: [id])

  roomId String?
  room   Room?   @relation(fields: [roomId], references: [id])
  itemId String?
  item   Item?   @relation(fields: [itemId], references: [id])

  estimatedResolutionTime DateTime?
  actualResolutionTime    DateTime?
  resolutionNotes         String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  organization  Organization            @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  statusHistory IncidentStatusHistory[]

  @@index([organizationId, status])
  @@index([organizationId, createdAt])
  @@index([organizationId, priority])
  @@index([reportedById])
  @@index([assignedToId])
  @@index([roomId])
  @@map("incidents")
}

model IncidentStatusHistory {
  id         String   @id @default(cuid())
  incidentId String
  incident   Incident @relation(fields: [incidentId], references: [id], onDelete: Cascade)

  fromStatus  IncidentStatus?
  toStatus    IncidentStatus
  notes       String?
  changedById String
  changedBy   User            @relation(fields: [changedById], references: [id])

  createdAt DateTime @default(now())

  @@index([incidentId])
  @@map("incident_status_history")
}

model PushToken {
  id         String   @id @default(cuid())
  userId     String
  token      String   @unique
  deviceType String?
  isActive   Boolean  @default(true)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, isActive])
  @@map("push_tokens")
}

model Account {
  id                       String  @id @default(cuid())
  userId                   String  @map("user_id")
  type                     String
  provider                 String
  providerAccountId        String  @map("provider_account_id")
  refresh_token            String?
  access_token             String?
  expires_at               Int?
  token_type               String?
  scope                    String?
  id_token                 String?
  session_state            String?
  refresh_token_expires_in Int?
  user                     User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique @map("session_token")
  userId       String   @map("user_id")
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expires])
  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@unique([identifier, token])
  @@map("verificationtokens")
}

model ApiCredential {
  id           String   @id @default(cuid())
  provider     String   @unique // "ROBOFLOW"
  encryptedKey String   @map("encrypted_key")
  iv           String
  tag          String
  modelId      String?  @map("model_id")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  @@map("api_credentials")
}

enum SubscriptionStatus {
  ACTIVE
  PAST_DUE
  CANCELLED
  TRIALING
}

enum PlatformRole {
  SUPER_ADMIN
  NONE
}

enum OrganizationRole {
  OWNER
  ADMIN
  MEMBER
}

enum SectorMemberRole {
  MANAGER
  MEMBER
}

enum OrganizationStatus {
  ACTIVE
  SUSPENDED
  TRIAL
}

enum Role {
  ADMIN
  USER
}

enum RoomStatus {
  LIVRE
  EM_USO
  RESERVADO
}

enum ReservationStatus {
  ACTIVE
  CANCELLED
  COMPLETED
  PENDING
  APPROVED
  REJECTED
}

enum NotificationType {
  RESERVATION_CREATED
  RESERVATION_APPROVED
  RESERVATION_REJECTED
  RESERVATION_CANCELLED
  RESERVATION_CONFLICT
  RESERVATION_REMINDER
  ROOM_STATUS_CHANGED
  SYSTEM_ANNOUNCEMENT
  INCIDENT_CREATED
  INCIDENT_ASSIGNED
  INCIDENT_STATUS_CHANGED
  INCIDENT_RESOLVED
}

enum IncidentStatus {
  REPORTED
  IN_ANALYSIS
  IN_PROGRESS
  RESOLVED
  CANCELLED
}

enum IncidentPriority {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum IncidentCategory {
  EQUIPMENT_FAILURE
  INFRASTRUCTURE
  SOFTWARE
  SAFETY
  MAINTENANCE
  ELECTRICAL
  NETWORK
  OTHER
}

enum RecurringPattern {
  DAILY
  WEEKLY
  MONTHLY
}

// ------------------------------------------------------
// NOVOS MODELOS PARA ALOCAÇÃO DE HORÁRIOS
// ------------------------------------------------------

model Turma {
  id             String @id @default(cuid())
  name           String // Ex: "1º Ano A", "Engenharia 5º Semestre"
  organizationId String
  shiftId        String? // Identificador do Turno (ex: "manha")

  organization   Organization   @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  cargasHorarias CargaHoraria[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([organizationId])
  @@map("turmas")
}

model Disciplina {
  id             String  @id @default(cuid())
  name           String // Ex: "Cálculo I", "História"
  code           String? // Ex: "CALC101"
  organizationId String
  isOffGrid      Boolean @default(false) // Se true, não entra na alocação da grade (ex: EaD, Estágio)

  organization   Organization   @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  cargasHorarias CargaHoraria[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([organizationId])
  @@map("disciplinas")
}

model CargaHoraria {
  id              String @id @default(cuid())
  turmaId         String
  disciplinaId    String
  professorId     String
  quantidadeAulas Int // Número de aulas dessa disciplina para essa turma com esse professor (Ex: 4)

  turma      Turma      @relation(fields: [turmaId], references: [id], onDelete: Cascade)
  disciplina Disciplina @relation(fields: [disciplinaId], references: [id], onDelete: Cascade)
  professor  Professor  @relation(fields: [professorId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([turmaId])
  @@index([disciplinaId])
  @@index([professorId])
  @@map("cargas_horarias")
}

model Disponibilidade {
  id          String @id @default(cuid())
  professorId String
  diaSemana   Int // 1 (Segunda) a 5 (Sexta) ou a convenção que preferir
  slotId      String // Identificador do slot configurado (Ex: "m1", "t1")

  professor Professor @relation(fields: [professorId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([professorId, diaSemana, slotId]) // Evita duplicidade de registro de disponibilidade
  @@index([professorId])
  @@map("disponibilidades")
}

model Professor {
  id             String @id @default(cuid())
  name           String
  email          String?
  organizationId String
  userId         String?

  organization    Organization      @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user            User?             @relation(fields: [userId], references: [id], onDelete: SetNull)
  cargasHorarias  CargaHoraria[]
  disponibilidades Disponibilidade[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([organizationId])
  @@index([userId])
  @@map("professores")
}
